--- a/programa curso campos/index.html
+++ b/programa curso campos/index.html
@@ -32,6 +32,7 @@
         <div class="container">
             <h2>Sobre o Curso</h2>
             <p>A Ciência da Computação é o estudo dos princípios e fundamentos da computação, suas aplicações e tecnologias. O curso abrange áreas como algoritmos, programação, inteligência artificial, redes de computadores, entre outros.</p>
+            <img src="517dmXbWxqL._SL500_.jpg" alt="imagemdosite">
         </div>
     </section>
 
